# NeuralResearch

./: .gitignore  CLAUDE.md  Cargo.toml  DSL_STATUS.md  claude-suggestions-1.md  claude-suggestions-2.md  docs.md  equations.tex  jumbled-notes.md  plan.md  requirements.txt  results.json  run_experiment.py  shell.nix  status.md
.claude/: settings.local.json
DOCUMENTATION/00_motivation/: 01_a_flexible_emulator.md
DOCUMENTATION/01_quiver_language/: 01_basics.md  02_data_types.md  03_operators.md  04_variables_and_properties.md  05_nodes.md  06_edges_and_topology.md  07_functions_and_morphs.md  08_subgraphs.md  09_graph.md  10_algebras.md  core_primitives_discussion.md  suggestions.md
DOCUMENTATION/01_sugraph_topology_network/: 01_basics.md  02_data_types.md  03_operators.md  04_variables_and_properties.md  05_nodes.md  08_subgraphs.md  09_graph.md
DOCUMENTATION/03_compiler/: 01_overview.md  02_lexer.md  03_parser.md  04_ast.md  05_ir.md  06_codegen.md
compiler/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs
compiler/src/analyzer/: compiler_error.rs  mod.rs
compiler/src/ast/: block.rs  data.rs  defaults.rs  display.rs  expr.rs  graph.rs  io.rs  link.rs  mod.rs  op.rs  program.rs  statement.rs  var.rs
compiler/src/ir/: declarative.rs  executable.rs  mod.rs
compiler/src/lexer/: mod.rs  token.rs
compiler/src/parser/: arg.rs  block.rs  error.rs  expr.rs  id.rs  io.rs  link.rs  mod.rs  operator.rs  statement.rs  statements.rs  var.rs
crates/neural-cli/: Cargo.toml
crates/neural-cli/src/: args.rs  blobs.rs  main.rs  mnist.rs
crates/neural-sim/: Cargo.toml
crates/neural-sim/src/: constants.rs  lib.rs  telemetry.rs  trial.rs
crates/neural-sim/src/gpu/: mod.rs
crates/neural-sim/src/io/: input.rs  output.rs
crates/neural-sim/src/math/: decay.rs  midpoint.rs  sample.rs
crates/neural-sim/src/network/: mod.rs
crates/neural-sim/src/network/event/: event.rs  handlers.rs  loop.rs  mod.rs  queue.rs
crates/neural-sim/src/network/topology/: conn.rs
crates/neural-sim/src/neuron/: dendrite.rs  mod.rs  population.rs  soma.rs  synapse.rs
crates/neural-telemetry/: Cargo.toml
crates/neural-telemetry/src/: lib.rs  spec.rs
dashboard/: package-lock.json  package.json
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: docs.rs  lib.rs  network.rs  recording.rs
dashboard/src-tauri/src/playground/: anatomy.rs  frame.rs  mod.rs
dashboard/src/lib/: api.ts  markdown.ts
docs/: 01-theory.md  02-architecture.md  03-data-model.md  04-math-primitives.md  05-event-system.md  06-learning-dynamics.md  07-network-construction.md  08-mnist-pipeline.md  09-gaps-and-open-questions.md  10-gpu-execution-and-residency.md  11-io-boundary.md  12-time-and-clocking.md  README.md  compiler.md  domain.md  group.md  language.md  network_generation.md  neuron.md  region_typing.md  regions.md
docs/code/: beta.md  data.md  defaults.md  events.md  gpu.md  ownership.md  structure.md
docs/resources/: index-relationships.md
frn/: sketch.frn
generated-rust/: Cargo.toml
generated-rust/src/: main.rs
neural_core/: Cargo.toml  README.md
neural_core/examples/: mnist_cortical.rs  mnist_ffn.rs  subgraph_mnist.rs
neural_core/src/: activation.rs  lib.rs  message.rs  node.rs
neural_core/src/burn/: mod.rs  pipeline.rs
neural_core/src/burn/data/: mnist.rs
neural_core/src/data/: mod.rs
neural_core/src/drive/: mod.rs
neural_core/src/graph/: README.md  builder.rs  csr.rs  mod.rs
neural_core/src/hierarchy/: mod.rs
neural_core/src/learning/: bcm.rs  hebbian.rs  mod.rs  oja.rs  stdp.rs
neural_core/src/module/: README.md  feedforward.rs  grid.rs  mod.rs
neural_core/src/modules/: classify.rs  feedforward.rs  mod.rs  supervised.rs  where_module.rs
neural_core/src/network/: README.md  builder.rs  flatten.rs  graph.rs  mod.rs  node.rs
neural_core/src/networks/: cortical_net.rs  ffn.rs  mod.rs
neural_core/src/region/: cortical.rs  mod.rs
neural_core/src/state/: leaky_integrated.rs  mod.rs  oscillator.rs  population.rs  spiking_lif.rs  state.rs  threshold.rs  update.rs
neural_core/src/state/rules/: leaky_integrated.rs  mod.rs  oscillator.rs  smooth_gate.rs  spiking_lif.rs  threshold.rs
neural_core/src/subgraph/: builder.rs  flatten.rs  graph.rs  node.rs  port.rs
notes/: 5-30-26.md  5-31-26.md  6-19-26.md  next_steps.md  topology.md
notes/runs/: trial-00023.md
plans/: dashboard-architecture.md
science/: equations.tex  intelligence.tex
src/: constants.rs  data.py  hopfield.py  lib.rs  settings.py  train.py
src/domain/: base.py
src/experiments/: cnn.py
src/gpu/: axon.rs  event.rs  mod.rs  synapse.rs
src/group/: base.py  model.py  port.py
src/init/: mod.rs  sample.rs
src/io/: mod.rs  output.rs
src/map/: base.py  input.py  local.py  mnist.py  output.py
src/math/: decay.rs  lehmer.py  midpoint.rs  mod.rs  sample.rs
src/network/: __init__.py  alloc.rs  build.rs  builder.py  edge_pattern.py  event.rs  graph.py  layout.rs  mnist.py  mod.rs  spec.py
src/neuron/: __init__.py  axon.rs  branch.rs  config.rs  dendrite.rs  dynamics.rs  edge.py  edge_topology.py  mod.rs  neuron.py  neuron.rs  population.rs  soma.rs  synapse.rs  types.rs
src/region/: mnist.py  region.py
src/test/: domain.py
stn/: 1-minimal-graph.stn  simple_classifier.stn
stn-docs/: 1-graph-declaration.md  display.md  dynamics.md
tex/: Cortical.tex  network-notes.tex  scaler-field-hdn.tex  topology-network.tex  wave-hdn.tex
visual/: __init__.py  network_visualizer.py
(+92 files in other folders)
