[workspace]
resolver = "3"
members = [
    "crates/neural-sim",
    "crates/neural-telemetry",
]

# Shared dependency versions. Members opt in with `dep.workspace = true`.
[workspace.dependencies]
rand = "0.10.1"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
neural-sim = { path = "crates/neural-sim" }
neural-telemetry = { path = "crates/neural-telemetry" }
