[package]
name = "neural_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
indexmap = "2"
arrow = { version = "53", features = ["ipc"] }
parquet = "53"
anyhow = "1"
burn = { version = "0.20.1", features = ["ndarray", "autodiff"] }

[[example]]
name = "mnist_ffn"
path = "examples/mnist_ffn.rs"
