[package]
name = "neural-telemetry"
version = "0.1.0"
edition = "2024"

# Persistence layer. This is where serde lives — `neural-sim` stays serialization-free so the
# GPU port stays clean. Holds the reproducible `NetworkSpec` format (network recipe → JSON).
[dependencies]
neural-sim.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
